--- a/todo.txt
+++ b/todo.txt
@@ -4,11 +4,10 @@ MUST HAVES:
 - Allow users to delete certain keys or config entries
 - allow users to obtain a list of their machines
 - test delete code more
-- add transactions
 - if EOF is received, need to have nicer error message. Also cleanup better - what if part way thru setup and EOF happens?
+- server seems to sometimes panic when websocket connection gets closed in a strange way.
 
 Nice to haves:
-- the live websocket code is scrappy, make it better
 - Apparently you can have duplicate keys in a ssh config. Will have to not use a map[string]string and instead use a []keyValuePair or something.
 - IdentityFile - due to this duplicate attribute issue, probably forget about storing it in its own column in the database and just ensure that the CLI parses it carefully
 - add a space to each host entry in the ssh config generation
